# IB_MCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
mcp_market_data/: Dockerfile  pyproject.toml  server.py
mcp_market_data/tools/: _ticker_pool.py  charts.py  deep_analysis.py  economic_calendar.py  fundamentals.py  history.py  overview.py  stock.py  technical_charts.py  technicals.py
mcp_news/: Dockerfile  pyproject.toml  server.py
mcp_news/tools/: earnings.py  finnhub_news.py  rss.py
mcp_sentiment/: Dockerfile  pyproject.toml  server.py
mcp_sentiment/tools/: alphavantage.py  combined.py  earnings_proximity.py  fear_greed.py  finnhub_sentiment.py  google_trends.py  grok_x_sentiment.py  insider_signal.py  options_sentiment.py  reddit.py  rss_sentiment.py  stocktwits.py  yfinance_news.py
mcp_server/: config.py  fastapi_server.py  pyproject.toml
mcp_server/routers/: alerts.py  scanner.py  session.py
reports/: comparison_final.md  comparison_prefix_vs_postfix.md
rss_collector/: Dockerfile  collector.py  feeds.py  models.py  mongo_client.py  ollama_analyzer.py  openclaw_client.py  prompts.py  pyproject.toml  server.py
scoring_engine/: Dockerfile  alerter.py  config.py  influx_writer.py  openclaw_decision.py  pipeline.py  pyproject.toml  scorer.py  sentiment_llm.py  server.py
scoring_engine/agents/: __init__.py  base.py  fundamental.py  macro.py  sentiment.py  technical.py
scoring_engine/backtest/: calibration.py  multi_factor.py  replayer.py  strategies_v3.py  strategies_v4.py
scoring_engine/debate/: __init__.py  bear.py  bull.py  facilitator.py  prompts.py
scoring_engine/feedback/: drift_detector.py  performance.py  tracker.py
scoring_engine/risk/: __init__.py  portfolio_risk.py  position_sizer.py
scripts/: backfill_history.py  load_test.sh  run_load_test.sh
shared/: db_schema.sql
telegram_bot/: Dockerfile  bot.py  db.py  mcp_clients.py  models.py  orchestrator.py  pyproject.toml  safety_guards.py
tests/: README.md  analyze_results.py  load_config.py  locustfile.py
workers/stocktwits-proxy/: wrangler.toml
workers/stocktwits-proxy/.wrangler/cache/: wrangler-account.json
workers/stocktwits-proxy/src/: index.js
