[project]
name = "mcp-sentiment"
version = "0.2.0"
description = "MCP server for multi-source sentiment analysis (Finnhub, Alpha Vantage, Reddit, StockTwits, CNN Fear & Greed)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.10.3",
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "praw>=7.7.0",
    "httpx>=0.28.0",
    "textblob>=0.18.0",
    "pydantic>=2.11,<2.12",
    "finnhub-python>=2.4.20",
]

[dependency-groups]
dev = []
