[project]
name = "mcp-sentiment"
version = "0.2.0"
description = "MCP server for multi-source sentiment analysis (11 sources: Finnhub, Alpha Vantage, Reddit, StockTwits, CNN F&G, RSS, yfinance News, Google Trends, Earnings, Grok X, Combined)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.10.3",
    "fastapi==0.116.0",
    "uvicorn==0.35.0",
    "praw>=7.7.0",
    "httpx>=0.28.0",
    "textblob>=0.18.0",
    "pydantic>=2.11,<2.12",
    "finnhub-python>=2.4.20",
    "motor>=3.6.0",
    "yfinance>=0.2.40",
    "pytrends>=4.9.0",
    "openai>=1.0",              # Compatible OpenAI SDK for xAI Grok API (grok_x_sentiment.py)
]

[dependency-groups]
dev = []
