[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot orchestrator: Claude API + MCP tools + safety guards"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "anthropic>=0.40.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.10.1",
    "pydantic>=2.11,<2.12",
]

[dependency-groups]
dev = []
